testsuite/tests/typing-missing-cmi/test.compilers.reference
File "main.ml", line 1, characters 14-17:
1 | let _ = A.a = B.b
                  ^^^
Error: The value B.b has type M.b but an expression was expected of type M.a
       Type M.b is abstract because no corresponding cmi file was found
       in path.
       Type M.a is abstract because no corresponding cmi file was found
       in path.
